--- a/docs/.vitepress/theme/global.less
+++ b/docs/.vitepress/theme/global.less
@@ -3,8 +3,8 @@
  * -------------------------------------------------------------------------- */
 
  :root {
-  --vp-c-brand: #646cff;
-  --vp-c-brand-light: #747bff;
+   --vp-c-brand: #165DFF;
+   --vp-c-brand-light: #165DFF;
   --vp-c-brand-lighter: #9499ff;
   --vp-c-brand-lightest: #bcc0ff;
   --vp-c-brand-dark: #535bf2;
@@ -49,6 +49,7 @@
     #47caff 50%
   );
   --vp-home-hero-image-filter: blur(40px);
+  --vp-c-indigo-1: #165DFF;
 }
 
 @media (min-width: 640px) {
@@ -264,10 +265,10 @@ html.dark .VPHome {
 .VPButton.brand {
   font-weight: 700;
   border: none;
-  background: linear-gradient(to right, #09c8ce, #e4c31b, #eb2f96);
+  background-color: #165DFF;
   transition: all .25s;
   &:hover {
-    background: linear-gradient(to right, #eb2f96, #09c8ce, #e4c31b);
+    background-color: #165DFF;
   }
 }
 .VPButton.alt {
